--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ h3
       and project management .<br> I have great technical abilities , allowing me to work with a diverse group of Cliental.<br> 
       I am looking for new challenges to help me grow and enhance my abilities.  </p>
     </div>
-      <img src="./pic.jpg" width="200px">
+      <img src="file:///C:/Users/hp/Desktop/Front-end-Projects/Google-Pages/images2/pic.jpg" width="200px">
             <h3 style="margin-bottom: -12px">Personal Details</h3>
             <p>
             <ul>
