--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ h3
               <li> <strong>Email address</strong> : ekroabdihussein@gmail.com</li>
                 <br>
 
-                <li> <strong>Email address</strong> : 252612005457</li>
+                <li> <strong>Phone Number</strong> : 252612005457</li>
                   <br>
 
                   <li> <strong>Address</strong> : somalia, 0000 mogadisho</li>
